Fix: getWallet
