# moonbagbe/src/routes/walletRoutes.js
@@ -14,7 +14,7 @@ const router = Router();
 router.post("/add", addWallet);
 router.delete("/remove", removeWallet);
 router.post("/update", updateMoonbagPercent);
-router.get("/get", getWallet);
+router.get("/get/:wallet_address", getWallet);
 
 router.get("/list", listWallets);
 router.post("/webhook", handleWebhook);
