# moonbagbe/swagger.yaml
@@ -83,19 +83,16 @@ paths:
         500:
           description: Server error
 
-  /api/wallets/get:
+  /api/wallets/get/{wallet_address}:
     get:
       summary: Get wallet details
       tags: [Wallets]
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                address:
-                  type: string
+      parameters:
+        - in: path
+          name: wallet_address
+          required: true
+          schema:
+            type: string
       responses:
         200:
           description: Wallet details retrieved successfully
